can't use Cryptomatte-Picker when window is teared off #101058

Closed
opened 2022-09-14 10:12:33 +02:00 by J. Kissel · 6 comments

System Information
Operating system: Windows-10-10.0.18363-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59

Blender Version
Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: a2d59b2dac
Worked: (newest version of Blender that worked as expected)

can't use Cryptomatte-Picker when window is teared off

It seems that the Picker does not work to select objects for the cryptomatte when the composite window is teared off.

  • set up a basic render with selected Cryptomatte - object , material whatever.

  • render image

  • create cryptomatte node in compositor

  • when the compositor window is integrated in the main blender workspace selecting objects in the render window using the picker works as expected

  • tear off the compositor panel

  • picker does not select objects when the picker from the second (floating) window is used but works nevertheless from the main window

**System Information** Operating system: Windows-10-10.0.18363-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.59 **Blender Version** Broken: version: 3.2.1, branch: master, commit date: 2022-07-05 15:44, hash: `a2d59b2dac` Worked: (newest version of Blender that worked as expected) can't use Cryptomatte-Picker when window is teared off It seems that the Picker does not work to select objects for the cryptomatte when the composite window is teared off. - > set up a basic render with selected Cryptomatte - object , material whatever. - > render image - > create cryptomatte node in compositor - > when the compositor window is integrated in the main blender workspace selecting objects in the render window using the picker works as expected - > tear off the compositor panel - > picker does not select objects when the picker from the second (floating) window is used but works nevertheless from the main window
Author

Added subscriber: @Masterheavy

Added subscriber: @Masterheavy
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

This seems to be the same as #78833, which also happens on Windows looking at the replies contrary to the original report.
I can confirm it myself on Linux, but I will wait for someone to confirm on Windows.

This seems to be the same as #78833, which also happens on Windows looking at the replies contrary to the original report. I can confirm it myself on Linux, but I will wait for someone to confirm on Windows.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem on Windows. But it is a little different than what is described in the #78833.
The problem described in #78833 has been fixed on Windows (as long as it is not tested in a Debug build).

I can confirm the problem on Windows. But it is a little different than what is described in the #78833. The problem described in #78833 has been fixed on Windows (as long as it is not tested in a Debug build).
Philipp Oeser removed the
Interest
User Interface
label 2023-02-10 09:21:46 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-14 20:28:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101058
No description provided.