Fix #101058: Allow Cryptomatte Picking Between Windows

Allow the source and target windows to differ when selecting
objects using Cryptomatte. But this does not show the name.